SERVER-12209: check _id for $fields at insert time